<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yulin.ivan.firebase.ui.activities.LoginActivity">

    <item
        android:id="@+id/original_content"
        android:orderInCategory="100"
        android:title="@string/original_content"
        app:showAsAction="never" />

    <item
        android:id="@+id/censored_content"
        android:orderInCategory="100"
        android:title="@string/censored_content"
        app:showAsAction="never" />

    <item
        android:id="@+id/antagonized_content"
        android:orderInCategory="100"
        android:title="@string/antagonized_content"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>
